tried fixing modal buttons being slighty off center and also added media queries and fixed footer overlapping game content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
     clear: both;
     width: 100%;
     overflow-y: scroll;
+    padding-bottom: 250px;
 }
 
 /* Webiste's Logo And Title */
@@ -48,10 +49,6 @@ body {
             transform: translate(-50%, -50%);
   }
 
-.modal-buttons {
-    text-align: center;
-}
-
 .modal-content {
     background-color: rgba(0, 0, 0, 1);
     font-family: var(--bodyfont1);
@@ -59,15 +56,6 @@ body {
     padding: 15px;
     width: 100%;
     height: 100%;
-}
-
-.game-content {
-    display: none;
-    text-align: center;
-    font-family: var(--bodyfont1);
-    font-weight: 300;
-    background-color: rgba(0, 0, 0, .9);
-    margin-bottom: 20px;
 }
 
 .modal-header {
@@ -83,6 +71,7 @@ body {
 
 .modal-buttons {
     line-height: 50px;
+    width: 268px;
     text-transform: capitalize;
     color: rgb(0, 0, 0);
     background-color: var(--colour1);
@@ -94,7 +83,8 @@ body {
     width: 268px;
     cursor: pointer;
     border-radius: 20px; 
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
+    text-align: center;
 }
 
 .modal-buttons:hover {
@@ -106,6 +96,15 @@ body {
 .game-levels {
     list-style-type: none;
     font-family: var(--bodyfont1);
+}
+
+.game-content {
+    display: none;
+    text-align: center;
+    font-family: var(--bodyfont1);
+    font-weight: 300;
+    background-color: rgba(0, 0, 0, .9);
+    margin-bottom: 20px;
 }
 
 /* Game Cards / Game Page */
@@ -267,6 +266,10 @@ body {
         height: 102px;
         width: 100%;
     }
+    .game-cards {
+        width: calc(25% - 3px);
+        height: calc(25% - 3px);
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -276,6 +279,7 @@ body {
     }
 }
 
+
 @media only screen and (max-width:768px) {
     .game-container {
         width: 100%;
@@ -283,5 +287,17 @@ body {
     .game-data-div {
         width: 100%;
         height: 750px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .game-container {
+        width: 100%;
+    }
+    .game-data-div {
+        width: 100%;
+    }
+    body {
+        padding-bottom: 300px;
     }
 }
